--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   "homepage": "https://github.com/ShogunPanda/package-utils",
   "dependencies": {
     "commander": "~2.11",
-    "semver": "^5.3.0"
+    "semver": "~5.4"
   },
   "devDependencies": {
-    "@cowtech/eslint-config": "~4.2",
-    "eslint": "~4.2"
+    "@cowtech/eslint-config": "~4.4",
+    "eslint": "~4.4"
   }
 }
