--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "lint": "./node_modules/.bin/eslint index.js bin lib test",
+    "lint": "eslint index.js bin lib test",
     "package-utils": "node ./index.js",
     "postpublish": "git push origin && git push origin -f --tags"
   },
